// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Timeline > renders with clipSidebar prop 1`] = `
<div>
  <div
    class="prc-Timeline-Timeline-iQjcc"
    data-clip-sidebar=""
  />
</div>
`;

exports[`Timeline.Item > renders with condensed prop 1`] = `
<div>
  <div
    class="Timeline-Item prc-Timeline-TimelineItem-Sd-t-"
    data-condensed=""
  />
</div>
`;
